test/ui/tests/unrecognized-intrinsic-function.stderr
error[E061]: `i-definitely-do-not-exist` is not an intrinsic function
  --> ${TEST_FOLDER}/unrecognized-intrinsic-function.lushui:9:1
   |
 9 | @intrinsic
   | ----------
   |
  --> ${TEST_FOLDER}/unrecognized-intrinsic-function.lushui:10:1
   |
10 | i-definitely-do-not-exist: I-Do-Exist
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: aborting due to previous error

